--- a/src/RLE.sim/sim_1/behav/xsim/xsim.dir/unpackager_dec_tb_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/src/RLE.sim/sim_1/behav/xsim/xsim.dir/unpackager_dec_tb_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Aug 11 13:24:21 2021</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Aug 18 13:18:19 2021</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>2308d4295dca4317a75af360ea7c31ae</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>28</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>6684e19e-be1d-49ed-97d8-37a5c534620b</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>6684e19e-be1d-49ed-97d8-37a5c534620b</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -36,16 +36,15 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>command=xsim</TD>
-    <TD>runall=true</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>iteration=1</TD>
-    <TD>runtime=34155560 ns</TD>
-    <TD>simulation_memory=8944_KB</TD>
-    <TD>simulation_time=2.20_sec</TD>
+<TR ALIGN='LEFT'>    <TD>iteration=2</TD>
+    <TD>runtime=6 us</TD>
+    <TD>simulation_memory=6524_KB</TD>
+    <TD>simulation_time=0.01_sec</TD>
 </TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
 </TR>   </TABLE>
    </TD></TR>
